--- a/Bets/bin/Etiquetas_es.properties
+++ b/Bets/bin/Etiquetas_es.properties
@@ -1,5 +1,6 @@
 Accept=Aceptar
 Close=Cerrar
+CheckProfile=Ver perfil
 CreateQuery=Crear Pregunta
 ErrorEventHasFinished=Error\: El evento ha finalizado
 ErrorNumber=Error: Introduce un número positivo
@@ -8,9 +9,11 @@ ErrorQueryAlreadyExist=Error: La pregunta ya existe
 Event=Evento
 EventDate=Fecha evento
 EventN=Evento#
+LogIn=Iniciar sesión
 Events=Eventos
 ListEvents=Lista de eventos
 MainTitle=Apuestas
+ManageUsers=Administrar usuarios
 MinimumBetPrice=Apuesta Min
 NoEvents= No hay preguntas
 NoQueries=No hay preguntas para el evento 
@@ -21,5 +24,6 @@ QueryAlreadyExist=La pregunta ya existe
 QueryCreated=Pregunta creada
 QueryQueries=Consultar preguntas 
 QueryN=#Pregunta
+Register=Registrase
 SelectOption=Seleccionar opción
 SelectedEvent=Preguntas para el evento:  
