--- a/Bets/src/Etiquetas_en.properties
+++ b/Bets/src/Etiquetas_en.properties
@@ -1,5 +1,6 @@
 Accept=Accept
 Close=Close
+CheckProfile=Check profile
 CreateQuery=Create Question
 ErrorEventHasFinished=Error\: Event Has Finished
 ErrorNumber=Error\: Introduce a positive number
@@ -9,8 +10,10 @@ Event=Event
 EventDate=Event Date
 EventN=Event\#
 Events=Events
+LogIn=Log in
 ListEvents=List of events
 MainTitle=Bets
+ManageUsers=Manage Users
 MinimumBetPrice=Min Bet 
 NoEvents=There are no events 
 NoQueries=There are no questions yet for the event 
@@ -21,5 +24,6 @@ QueryAlreadyExist=Question Already Exists
 QueryCreated=Question created
 QueryQueries=Query Questions
 QueryN=Question\#
+Register=Register
 SelectOption=Select Option
 SelectedEvent=Questions for the event
