UserManagementGUI created. Implements the "add user", "edit user data", "remove user", and "search users" use cases. EditUserGUI added (user information edit window for admins).

--- a/Bets/bin/Etiquetas_en.properties
+++ b/Bets/bin/Etiquetas_en.properties
@@ -27,3 +27,8 @@ QueryN=Question\#
 Register=Register
 SelectOption=Select Option
 SelectedEvent=Questions for the event
+Name=Name
+Surname=Surname
+Email=Email
+Status=Status
+ID=ID
