--- a/Bets/src/Etiquetas_en.properties
+++ b/Bets/src/Etiquetas_en.properties
@@ -27,3 +27,8 @@ QueryN=Question\#
 Register=Register
 SelectOption=Select Option
 SelectedEvent=Questions for the event
+Name=Name
+Surname=Surname
+Email=Email
+Status=Status
+ID=ID
